# speech

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  EspeakExample_8hpp_source.html  EspeakServer_8hpp_source.html  Espeak_8hpp_source.html  LlamaGPT_2LogComponent_8hpp_source.html  LlamaGPT_8hpp_source.html  LlamaGPT__ParamsParser_8h_source.html  PiperSynthesizer_2LogComponent_8hpp_source.html  PiperSynthesizer_8hpp_source.html  PiperSynthesizer__ParamsParser_8h_source.html  README.md  VoskTranscription_2LogComponent_8hpp_source.html  VoskTranscription_8hpp_source.html  VoskTranscription__ParamsParser_8h_source.html  annotated.html  classLlamaGPT-members.html  classLlamaGPT.html  classLlamaGPT__ParamsParser-members.html  classLlamaGPT__ParamsParser.html  classPiperSynthesizer-members.html  classPiperSynthesizer.html  classPiperSynthesizer__ParamsParser-members.html  classPiperSynthesizer__ParamsParser.html  classSoundCallback-members.html  classSoundCallback.html  classVoskTranscription-members.html  classVoskTranscription.html  classVoskTranscription__ParamsParser-members.html  classVoskTranscription__ParamsParser.html  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  classdetail_1_1binary__writer.html  (+456 more)
.github/workflows/: ci.yml  docker.yml
bindings/: CMakeLists.txt  roboticslab_speech.i
bindings/python/: CMakeLists.txt
cmake/: BuildCOLOR_DEBUG.cmake  CMakeLists.txt
cmake/find-modules/: FindEspeak.cmake  FindVosk.cmake
cmake/template/: ROBOTICSLAB_SPEECHConfig.cmake.in
cmake/templates/: ROBOTICSLAB_SPEECHConfig.cmake.in
doc/: CMakeLists.txt  groups.dox  main.dox  speech-development-manual.md  speech-install.md  speech-instructions.md
docker/: Dockerfile
example/cpp/espeakExample/: CMakeLists.txt  EspeakExample.cpp  EspeakExample.hpp  main.cpp
examples/cpp/: CMakeLists.txt
examples/cpp/espeakClientExample/: CMakeLists.txt  main.cpp
examples/cpp/espeakExample/: CMakeLists.txt  EspeakExample.cpp  EspeakExample.hpp  main.cpp
examples/cpp/llmClientExample/: CMakeLists.txt  main.cpp
examples/cpp/speechSynthesizerClientExample/: CMakeLists.txt  main.cpp
examples/cpp/speechSynthesizerExample/: CMakeLists.txt  main.cpp
examples/cpp/voskTranscriptionExample/: CMakeLists.txt  main.cpp
examples/python/: espeakClientExample.py  llmClientExample.py  speechSynthesizerClientExample.py  speechSynthesizerExample.py  voskTranscriptionExample.py
libraries/: CMakeLists.txt
libraries/Espeak/: CMakeLists.txt  Espeak.cpp  Espeak.hpp
libraries/ExampleLibrary/: CMakeLists.txt
libraries/SpeechIDL/: CMakeLists.txt  speech.thrift
libraries/SpeechYarp/: CMakeLists.txt
libraries/SpeechYarp/Espeak/: CMakeLists.txt  Espeak.hpp
libraries/YarpPlugins/: CMakeLists.txt
libraries/YarpPlugins/Espeak/: CMakeLists.txt  Espeak.cpp  Espeak.hpp  README.md  speech.thrift
libraries/YarpPlugins/LlamaGPT/: CMakeLists.txt  DeviceDriverImpl.cpp  ILLMImpl.cpp  LlamaGPT.cpp  LlamaGPT.hpp  LlamaGPT_ParamsParser.cpp  LlamaGPT_ParamsParser.h  LlamaGPT_params.md  LogComponent.cpp  LogComponent.hpp
libraries/YarpPlugins/PiperSynthesizer/: CMakeLists.txt  DeviceDriverImpl.cpp  ISpeechSynthesizerImpl.cpp  LogComponent.cpp  LogComponent.hpp  PiperSynthesizer.cpp  PiperSynthesizer.hpp  PiperSynthesizer_ParamsParser.cpp  PiperSynthesizer_ParamsParser.h  PiperSynthesizer_params.md  README.md
libraries/YarpPlugins/VoskTranscription/: CMakeLists.txt  DeviceDriverImpl.cpp  ISpeechTranscriptionImpl.cpp  LogComponent.cpp  LogComponent.hpp  README.md  VoskTranscription.hpp  VoskTranscription_ParamsParser.cpp  VoskTranscription_ParamsParser.h  VoskTranscription_params.md
libraries/YarpPlugins/eSpeakSynthesizer/: CMakeLists.txt  DeviceDriverImpl.cpp  ISpeechSynthesizerImpl.cpp  LogComponent.cpp  LogComponent.hpp  README.md  eSpeakSynthesizer.hpp  eSpeakSynthesizer_ParamsParser.cpp  eSpeakSynthesizer_ParamsParser.h  eSpeakSynthesizer_params.md
programs/: CMakeLists.txt
programs/chatCompletion/: CMakeLists.txt  chatCompletion.py
programs/espeakServer/: CMakeLists.txt  EspeakServer.cpp  EspeakServer.hpp  README.md  main.cpp
programs/exampleProgram/: CMakeLists.txt  main.cpp
programs/speechRecognition/: CMakeLists.txt  README.md  speechRecognition.py
programs/speechSynthesis/: CMakeLists.txt  README.md  speechSynthesis.py  test.py
programs/voskYarpTranscriber/: voskYarpTranscriber.py
programs/wakeWord/: CMakeLists.txt  wakeWord.py
scripts/admin/: update-dox.sh
scripts/gnome/: roboticslab-speech.desktop
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_a.js  classes_b.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_13.js  functions_15.js  (+45 more)
share/: CMakeLists.txt
share/PiperSynthesizer/: PiperSinthesizer.ini
share/applications/: chatCompletion.xml  chatCompletion_en.xml  chatCompletion_es.xml  example_Espeak.xml  example_espeakServer.xml  example_speechRecognition.xml  llmConversation.xml  speechSynthesis.xml  speechTranscription.xml
share/contexts/LlamaGPT/: LlamaGPT.ini
share/contexts/VoskTranscription/: VoskTranscription.ini
share/contexts/wakeWord/: hey-teo.onnx  oye-teo.onnx  wakeWord.ini
share/speechRecognition/: CMakeLists.txt
share/speechSynthesis/: CMakeLists.txt
tests/: CMakeLists.txt  testEspeak.cpp  testeSpeakSynthesizer.cpp
